--- a/application/server/views/index.jade
+++ b/application/server/views/index.jade
@@ -5,3 +5,6 @@ html
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     h1= title
+    a(href="/login") login
+    br
+    a(href="/register") register
