added: test input form for file upload

--- a/application/server/views/index.jade
+++ b/application/server/views/index.jade
@@ -8,3 +8,5 @@ html
     a(href="/login") login
     br
     a(href="/register") register
+    br
+    input.form-control(type='file', name='test_file')
