--- a/application/server/views/login.jade
+++ b/application/server/views/login.jade
@@ -8,7 +8,7 @@ html
      form(method='POST' action='/login')
           div.form-group
             label(for='name') Username:
-            input#name.form-control(type='text', placeholder='first and last' name='username')
+            input#name.form-control(type='text' placeholder='username' name='username')
           div.form-group
             label(for='pw') Password:
             input#pw.form-control(type='password' name='password')
