added: file upload

--- a/application/server/views/index.jade
+++ b/application/server/views/index.jade
@@ -9,4 +9,4 @@ html
     br
     a(href="/register") register
     br
-    input.form-control(type='file', name='test_file')
+    a(href="/upload") upload
