--- a/application/server/views/upload.jade
+++ b/application/server/views/upload.jade
@@ -7,5 +7,5 @@ html
     h1= title
      form(method='POST' action='/upload' encType="multipart/form-data")
           div.form-group
-            input.form-control(type='file', name='test_file')
+            input.form-control(type='file', name='file')
           button.btn.btn-primary(type='submit') Submit
