--- a/application/server/views/upload.jade
+++ b/application/server/views/upload.jade
@@ -16,4 +16,6 @@ html
             input.form-control(type='text' placeholder='title' name='title')
           div.form-group
             input.form-control(type='text' placeholder='description' name='description')
+          div.form-group
+            input.form-control(type='text' placeholder='category' name='category')
           button.btn.btn-primary(type='submit') Submit
