--- a/application/server/views/upload.jade
+++ b/application/server/views/upload.jade
@@ -17,5 +17,9 @@ html
           div.form-group
             input.form-control(type='text' placeholder='description' name='description')
           div.form-group
-            input.form-control(type='text' placeholder='category' name='category')
+            select.form-control(type='text', name='category')
+              option(value='document') Document
+              option(value='image') Image
+              option(value='video') Video
+              option(value='audio') Audio
           button.btn.btn-primary(type='submit') Submit
