added approve page and updated media manager to get from status

--- a/application/server/views/ban.jade
+++ b/application/server/views/ban.jade
@@ -8,5 +8,5 @@ html
      form(method='POST' action='/ban')
           div.form-group
             label(for='name') Ban Username:
-            input#name.form-control(type='text', placeholder='first and last' name='username')
+            input#name.form-control(type='text', placeholder='username' name='username')
           button.btn.btn-primary(type='submit') Ban
