added: approve link to index page

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -15,5 +15,7 @@
     <a href="/logout">logout</a>
     <br>
     <a href="/ban">ban</a>
+    <br>
+    <a href="/approve">approve</a>
   </body>
 </html>
