--- a/application/server/views/approve.ejs
+++ b/application/server/views/approve.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Approve</h1>
-    <table>
+    <table width="100%">
       <tr>
         <th>ID</th>
         <th>Title</th>
@@ -17,18 +17,18 @@
       </tr>
 <% result.forEach(function(obj){ %>
       <tr>
-        <td><%=obj.id%></td>
-        <td><%=obj.title%></td>
-        <td><%=obj.description%></td>
-        <td>
+        <td style="text-align:center"><%=obj.id%></td>
+        <td style="text-align:center"><%=obj.title%></td>
+        <td style="text-align:center"><%=obj.description%></td>
+        <td style="text-align:center">
           <form action="/download" method="post" style="display: inline-block;">
             <button type="submit" name="path" value="<%=obj.raw_path%>">Download Raw</button>
           </form>
         </td>
-        <td>
+        <td style="text-align:center">
            <img src="<%=obj.preview_path%>" style="width: 100px; height: 100px;"> 
         </td>
-        <td><%=obj.status%></td>
+        <td style="text-align:center"><%=obj.status%></td>
       </tr>
       <%})%>
     </table>
