--- a/application/server/views/approve.ejs
+++ b/application/server/views/approve.ejs
@@ -14,6 +14,7 @@
         <th>Raw File</th>
         <th>Preview Image</th>
         <th>Status</th>
+        <th>Controls</th>
       </tr>
 <% result.forEach(function(obj){ %>
       <tr>
@@ -26,9 +27,17 @@
           </form>
         </td>
         <td style="text-align:center">
-           <img src="<%=obj.preview_path%>" style="width: 100px; height: 100px;"> 
+           <img src="<%=obj.preview_path.substr(obj.preview_path.indexOf('/') + 1)%>" style="width: 100px; height: 100px;"> 
         </td>
         <td style="text-align:center"><%=obj.status%></td>
+        <td style="text-align:center">
+          <form action="/approve" method="post" style="display: inline-block;">
+            <button type="submit" name="id" value="<%=obj.id%>" style="background-color: #4CAF50;">Accept</button>
+          </form>
+          <form action="/reject" method="post" style="display: inline-block;">
+            <button type="submit" name="id" value="<%=obj.id%>" style="background-color: #f44336;">Reject</button>
+          </form>
+        </td>
       </tr>
       <%})%>
     </table>
