added: username to approve page

--- a/application/server/views/approve.ejs
+++ b/application/server/views/approve.ejs
@@ -17,10 +17,10 @@
         <th>Status</th>
         <th>Controls</th>
       </tr>
-<% result.forEach(function(obj){ %>
+<% results.forEach(function(obj){ %>
       <tr>
         <td style="text-align:center"><%=obj.id%></td>
-        <td style="text-align:center"><%=obj.author_id%></td>
+        <td style="text-align:center"><%=obj.author_username%></td>
         <td style="text-align:center"><%=obj.title%></td>
         <td style="text-align:center"><%=obj.description%></td>
         <td style="text-align:center">
