--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -9,16 +9,18 @@
     <% if (user !== undefined) { %>
       <br>
       <a href="/logout">logout</a>
+      <br>
+      <a href="/upload">upload</a>
     <% } else { %>
       <a href="/login">login</a>
       <br>
       <a href="/register">register</a>
     <% } %>
-    <br>
-    <a href="/upload">upload</a>
-    <br>
-    <a href="/ban">ban</a>
-    <br>
-    <a href="/approve">approve</a>
+    <% if (user !== undefined && user.privilege == 'admin') { %>
+      <br>
+      <a href="/ban">ban</a>
+      <br>
+      <a href="/approve">approve</a>
+    <% } %>
   </body>
 </html>
