--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -6,5 +6,15 @@
   </head>
   <body>
     <h1>Browse</h1>
+    <form method='POST' action='/browse'>
+        <input type='text' placeholder='Search' name='term'><br>
+        <select name="category">
+          <option value="all">All</option>
+          <option value="document">Document</option>
+          <option value="image">Image</option>
+          <option value="video">Video</option>
+          <option value="audio">Audio</option>
+        </select>
+    </form>
   </body>
 </html>
