--- a/application/server/views/upload.ejs
+++ b/application/server/views/upload.ejs
@@ -13,7 +13,7 @@
       <input type='file' name='preview'><br>
       <input type='text' placeholder='title' name='title'><br>
       <input type='text' placeholder='description' name='description'><br>
-      <select id="cars" name="category">
+      <select name="category">
         <option value="document">Document</option>
         <option value="image">Image</option>
         <option value="video">Video</option>
