--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -15,6 +15,7 @@
           <option value="video">Video</option>
           <option value="audio">Audio</option>
         </select>
+        <input type='submit' value='Submit'><br>
     </form>
     <table width="100%">
       <tr>
