added: category search in browser

--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -7,7 +7,7 @@
   <body>
     <h1>Browse</h1>
     <form method='POST' action='/browse'>
-        <input type='text' placeholder='Search' name='term'><br>
+        <input type='text' placeholder='Search' name='search'><br>
         <select name="category">
           <option value="all">All</option>
           <option value="document">Document</option>
