--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -22,6 +22,7 @@
         <th>Author</th>
         <th>Title</th>
         <th>Description</th>
+        <th>Category</th>
         <th>Preview Image</th>
         <th>Controls</th>
       </tr>
@@ -30,6 +31,7 @@
         <td style="text-align:center"><%=obj.author_username%></td>
         <td style="text-align:center"><%=obj.title%></td>
         <td style="text-align:center"><%=obj.description%></td>
+        <td style="text-align:center"><%=obj.category%></td>
         <td style="text-align:center">
            <img src="<%=obj.preview_path.substr((obj.preview_path.indexOf('/') + 1) * (obj.preview_path.indexOf('default/') != 0));%>" style="width: 100px; height: 100px;"> 
         </td>
