added: link to documentation page

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -24,5 +24,7 @@
     <% } %>
     <br>
     <a href="/browse">browse</a>
+    <br>
+    <a href="/documentation">documentation</a>
   </body>
 </html>
