fixed: browse page now uses GET requests

--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Browse</h1>
-    <form method='POST' action='/browse'>
+    <form method='GET' action='/browse'>
         <input type='text' placeholder='Search' name='search'><br>
         <select name="category">
           <option value="all">All</option>
