--- a/application/server/views/login.ejs
+++ b/application/server/views/login.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Login</h1>
-     <form method='GET' action='/login'>
+     <form method='POST' action='/login'>
         <label for='name'> Username: </label><br>
         <input type='text' placeholder='username' name='username'><br>
         <label for='pw'> Password: </label><br>
