modified adduser, signout, verifyuser, and user-manager to conform to new db (not finished)

--- a/application/server/views/register.ejs
+++ b/application/server/views/register.ejs
@@ -7,8 +7,12 @@
   <body>
     <h1>Register</h1>
       <form method='POST' action='/register'>
-        <label for='name'> Username: </label><br>
-        <input type='text', placeholder='first and last' name='username'><br>
+        <label for='username'> Username: </label><br>
+        <input type='text', placeholder='username' name='username'><br>
+        <label for='firstname'> First Name: </label><br>
+        <input type='text', placeholder='first' name='firstname'><br>
+        <label for='lastname'> Last Name: </label><br>
+        <input type='text', placeholder='last' name='lastname'><br>
         <label for='email'> Email: </label><br>
         <input type='email', placeholder='name@mail.sfsu.edu' name='email'><br>
         <label for='pw'> Password: </label><br>
