--- a/application/client/src/styles/Browse.css
+++ b/application/client/src/styles/Browse.css
@@ -8,23 +8,33 @@
   font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
   border-collapse: collapse;
   border: 3px solid #ddd;
-  width: 100%;
-  display: none
+  width: 60%;
+  display: none;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-#results td, #results th {
+#results td {
   border: 1px solid #ddd;
   padding: 8px;
 }
-
-#results tr:nth-child(even){background-color: #f2f2f2;}
-
-#results tr:hover {background-color: #ddd;}
 
 #results th {
   padding-top: 12px;
   padding-bottom: 12px;
   text-align: center;
-  background-color: #4CAF50;
+  background-color: rgb(159, 45, 182);
   color: white;
 }
+
+.table-head {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: center;
+  background-color: rgb(159, 45, 182);
+  color: white;
+}
+
+#results tr:nth-child(even){background-color: #f2f2f2;}
+
+#results tr:hover {background-color: #ddd;}
