--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -37,7 +37,7 @@
         </td>
         <td style="text-align:center">
           <form action="/cart" method="post" style="display: inline-block;">
-            <button type="submit" name="id" value="<%=obj.id%>" style="background-color: #4CAF50;">Add to Cart</button>
+            <button type="submit" name="id" value="<%=obj.m_id%>" style="background-color: #4CAF50;">Add to Cart</button>
           </form>
         </td>
       </tr>
