implemented shopping cart dashboard and fixed shopping cart

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -11,6 +11,8 @@
       <a href="/logout">logout</a>
       <br>
       <a href="/upload">upload</a>
+      <br>
+      <a href="/cart">shopping cart</a>
     <% } else { %>
       <a href="/login">login</a>
       <br>
