added price to dashboards and upload now requires price input

--- a/application/server/views/approve.ejs
+++ b/application/server/views/approve.ejs
@@ -15,6 +15,7 @@
         <th>Raw File</th>
         <th>Preview Image</th>
         <th>Status</th>
+        <th>Price</th>
         <th>Controls</th>
       </tr>
 <% results.forEach(function(obj){ %>
@@ -32,6 +33,7 @@
            <img src="<%=obj.preview_path.substr(obj.preview_path.indexOf('preview/') + 8);%>" style="width: 100px; height: 100px;"> 
         </td>
         <td style="text-align:center"><%=obj.status%></td>
+        <td style="text-align:center">$<%=obj.price%></td>
         <td style="text-align:center">
           <form action="/approve" method="post" style="display: inline-block;">
             <button type="submit" name="id" value="<%=obj.m_id%>" style="background-color: #4CAF50;">Accept</button>
