--- a/application/server/views/cart.ejs
+++ b/application/server/views/cart.ejs
@@ -13,6 +13,7 @@
         <th>Description</th>
         <th>Category</th>
         <th>Preview Image</th>
+        <th>Price</th>
       </tr>
 <% results.forEach(function(obj){ %>
       <tr>
@@ -23,6 +24,7 @@
         <td style="text-align:center">
            <img src="./<%=obj.preview_path.substr(obj.preview_path.indexOf('preview/') + 8);%>" style="width: 100px; height: 100px;"> 
         </td>
+        <td style="text-align:center">$<%=obj.price%></td>
       </tr>
       <%})%>
     </table>
