fixed pictures on approve

--- a/application/server/views/approve.ejs
+++ b/application/server/views/approve.ejs
@@ -30,7 +30,7 @@
           </form>
         </td>
         <td style="text-align:center">
-           <img src="<%=obj.preview_path.substr(obj.preview_path.indexOf('preview/') + 8);%>" style="width: 100px; height: 100px;"> 
+           <img src="./<%=obj.preview_path.substr(obj.preview_path.indexOf('preview/') + 8);%>" style="width: 100px; height: 100px;"> 
         </td>
         <td style="text-align:center"><%=obj.status%></td>
         <td style="text-align:center">$<%=obj.price%></td>
