--- a/application/server/views/ban.ejs
+++ b/application/server/views/ban.ejs
@@ -9,6 +9,15 @@
     <form method='POST' action='/ban'>
       <label for='name'> Ban Username: </label><br>
       <input type='text', placeholder='username' name='username'><br>
+      <textarea name='reason' cols='50', rows='10' placeholder="Enter reason" required></textarea><br>
+      Ban Length
+      <select name="ban_length">
+        <option value="1">1 day</option>
+        <option value="7">1 week</option>
+        <option value="30">1 month</option>
+        <option value="365">1 year</option>
+        <option value="999999">Permanent</option>
+      </select>
       <input type='submit' value='Ban'><br>
     </form>
   </body>
