--- a/application/server/views/cart.ejs
+++ b/application/server/views/cart.ejs
@@ -34,5 +34,8 @@
       </tr>
       <%})%>
     </table>
+    <form action="/checkout" method='post'>
+      <button type="submit">Checkout</button>
+    </form>
   </body>
 </html>
