changed: db now inserts into physical and digital media table

--- a/application/server/views/upload.ejs
+++ b/application/server/views/upload.ejs
@@ -21,7 +21,10 @@
         <option value="video">Video</option>
         <option value="audio">Audio</option>
       </select>
-
+      <select name="type">
+        <option value="digital">Digital</option>
+        <option value="physical">Physical</option>
+      </select>
       <input type='submit' value='Submit'><br>
     </form>
   </body>
