added: get purchases

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -13,6 +13,8 @@
       <a href="/upload">upload</a>
       <br>
       <a href="/cart">shopping cart</a>
+      <br>
+      <a href="/purchases">my purchases</a>
     <% } else { %>
       <a href="/login">login</a>
       <br>
