--- a/application/client/src/App.css
+++ b/application/client/src/App.css
@@ -1,9 +1,9 @@
 :root {
-  --mainBlue:#2a2a72;
-  --lightBlue:#009ffd;
-  --mainWhite:#f3f3f3;
-  --mainDark:#232528;
   --mainYellow:#ffa400;
+  --mainBlue:#9932CC;
+  --mainDark:#232528;
+  --lightBlue:#FFD700;
+  --mainWhite:#f3f3f3;
 }
 
 body {
