added: my listings back-end endpoint

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -15,6 +15,8 @@
       <a href="/cart">shopping cart</a>
       <br>
       <a href="/purchases">my purchases</a>
+      <br>
+      <a href="/listings">my listings</a>
     <% } else { %>
       <a href="/login">login</a>
       <br>
