added: purchase count when requesting POST /listings

--- a/application/server/views/purchases.ejs
+++ b/application/server/views/purchases.ejs
@@ -13,6 +13,7 @@
         <th>Category</th>
         <th>Preview Image</th>
         <th>Price</th>
+        <th>Status</th>
         <th>Controls</th>
       </tr>
       <% results.forEach(function(obj){ %>
