added: view next page for browse route

--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -14,7 +14,8 @@
           <option value="image">Image</option>
           <option value="video">Video</option>
           <option value="audio">Audio</option>
-        </select>
+        </select><br>
+        Page: <input type='number' name='page' placeholder='1' maxlength="3" size="3"><br>
         <input type='submit' value='Submit'><br>
     </form>
     <table width="100%">
