--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -17,6 +17,8 @@
       <a href="/purchases">my purchases</a>
       <br>
       <a href="/listings">my listings</a>
+      <br>
+      <a href="/messagebox">message box</a>
     <% } else { %>
       <a href="/login">login</a>
       <br>
