--- a/application/server/views/browse.ejs
+++ b/application/server/views/browse.ejs
@@ -12,7 +12,48 @@
           page: document.getElementById('page').value
         },
         (data, status) => {
-          console.log(data);
+          var table = document.getElementById("table");
+          table.getElementsByTagName("tbody")[0].innerHTML = table.rows[0].innerHTML;
+
+          data.results.forEach((result) => {
+            var row = table.insertRow(table.rows.length);
+
+            var authorCell = row.insertCell(row.cells.length);
+            authorCell.style = "text-align:center";
+
+            var profilePicture = document.createElement('img');
+            profilePicture.src = result.author_profile_path;
+            profilePicture.style="width: 50px; height: 50px;";
+            authorCell.appendChild(profilePicture);
+
+            var authorUsername = document.createElement('a');
+            authorUsername.innerHTML = result.author_username;
+            authorCell.appendChild(authorUsername);
+
+            var titleCell = row.insertCell(row.cells.length);
+            titleCell.style = "text-align:center";
+            titleCell.innerHTML = result.title;
+
+            var descriptionCell = row.insertCell(row.cells.length);
+            descriptionCell.style = "text-align:center";
+            descriptionCell.innerHTML = result.description;
+
+            var categoryCell = row.insertCell(row.cells.length);
+            categoryCell.style = "text-align:center";
+            categoryCell.innerHTML = result.category;
+
+            var previewImageCell = row.insertCell(row.cells.length);
+            previewImageCell.style = "text-align:center";
+
+            var previewPicture = document.createElement('img');
+            previewPicture.src = result.preview_path;
+            previewPicture.style="width: 100px; height: 100px;";
+            previewImageCell.appendChild(previewPicture);
+
+            var priceCell = row.insertCell(row.cells.length);
+            priceCell.style = "text-align:center";
+            priceCell.innerHTML = "$" + result.price;
+          });
         });
       }
     </script>
@@ -31,7 +72,7 @@
         Page: <input id='page' type='number' name='page' placeholder='1' maxlength="3" size="3"><br>
         <input type='submit' value='Submit'><br>
     </form>
-    <table width="100%">
+    <table id='table' width="100%">
       <tr>
         <th>Author</th>
         <th>Title</th>
@@ -45,7 +86,7 @@
       <tr>
         <td style="text-align:center">
           <img src="./<%=obj.author_profile_path%>" style="width: 50px; height: 50px;"> 
-          <%=obj.author_username%>
+          <a><%=obj.author_username%></a>
         </td>
         <td style="text-align:center"><%=obj.title%></td>
         <td style="text-align:center"><%=obj.description%></td>
