added: admins can now unban users

--- a/application/server/views/index.ejs
+++ b/application/server/views/index.ejs
@@ -28,6 +28,8 @@
       <br>
       <a href="/ban">ban</a>
       <br>
+      <a href="/unban">unban</a>
+      <br>
       <a href="/approve">approve</a>
     <% } %>
     <br>
